@@ -147,6 +147,25 @@
 				<code>org.eclipse.sirius.business.internal.session.danalysis.DAnalysisSessionImpl</code>, it has been extracted from here.
 			</li>
 		</ul>
+		<h4 id="Changesinorg.eclipse.sirius.tests.junit.support">Changes in  
+			<code>org.eclipse.sirius.tests.junit.support</code>
+		</h4>
+		<ul>
+			<li><span class="label label-success">Added</span> New methods have been added to 
+				<code>org.eclipse.sirius.tests.support.api.TestsUtil</code> to check the current Java runtime version. The parameter is the expected version of Java, i.e: ...7, 8, 9, ..., 13, 14, ...
+				<ul>
+					<li>
+						<code>isJavaVersion(int)</code>
+					</li>
+					<li>
+						<code>isJavaVersionOrOlder(int)</code>
+					</li>
+					<li>
+						<code>isJavaVersionOrNewer(int)</code>
+					</li>
+				</ul>
+			</li>
+		</ul>
 		<h2 id="sirius6.3.2">Changes in Sirius 6.3.2</h2>
 		<h3 id="UserVisibleChanges">User-Visible Changes</h3>
 		<ul>
@@ -1527,7 +1546,7 @@
 				<code>org.eclipse.sirius.ui.business.api.viewpoint.ViewpointSelectionDialog</code> has been removed.
 			</li>
 		</ul>
-		<h4 id="Changesinorg.eclipse.sirius.tests.junit.support">Changes in 
+		<h4 id="Changesinorg.eclipse.sirius.tests.junit.support2">Changes in 
 			<code>org.eclipse.sirius.tests.junit.support</code>
 		</h4>
 		<ul>
